CHANGELOG for smartmontools

$Id: CHANGELOG,v 1.10 2002/10/21 08:49:23 ballen4705 Exp $

Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>

Home page of code is: http://smartmontools.sourceforge.net

This program is free software; you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation; either version 2, or (at your option) any later
version.

You should have received a copy of the GNU General Public License (for
example COPYING); if not, write to the Free Software Foundation, Inc., 675
Mass Ave, Cambridge, MA 02139, USA.

This code was originally developed as a Senior Thesis by Michael Cornwell
at the Concurrent Systems Laboratory (now part of the Storage Systems
Research Center), Jack Baskin School of Engineering, University of
California, Santa Cruz. http://ssrc.soe.ucsc.edu/


NOTES FOR NEXT RELEASE:

    Next release: handle extended error and self-test logs gracefully.
    Parse and print attribute flag meanings


smartmontools-5.0-11

    device opened only in read-only not read-write mode.  Don't need R/W 
    access to get smart data.

    smartctl now handles all possible choices of "multiple options"
    gracefully.  It goes through the following phases of operation,
    in order: INFORMATION, ENABLE/DISABLE, DISPLAY DATA, RUN/ABORT TESTS.
    Documentation has bee updated to explain the different phases of
    operation.  Control flow through ataPrintMain()
    simplified.

    If reading device identity information fails, try seeing if the info
    can be accessed using a "DEVICE PACKET" command.  This way we can
    at least get device info.

    Modified Makefile to automatically tag CVS archive on issuance of
    a release

    Modified drive detection so minor device ID code showing ATA-3 rev
    0 (no SMART) is known to not be SMART capable.

    Now verify the checksum of the device ID data structure, and of the